Fix alignment.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,9 +3,9 @@
 $font-stack: "Source Sans Pro", Helvetica, sans-serif;
 $header-font: Arial, Helvetica, sans-serif;
 $primary-color: #333333;
-$secondary-color: #3E6257;
+$secondary-color: #3e6257;
 $third-color: #e1e6e1;
-$alt-color: #8954A8;
+$alt-color: #8954a8;
 $alt-accent-color: #ffe4b4;
 
 body {
@@ -13,9 +13,9 @@ body {
   color: $primary-color;
   margin: 0;
 }
-body::after{
+body::after {
   pointer-events: none;
-  content: '';
+  content: "";
   display: block;
   position: fixed;
   top: 0;
@@ -37,9 +37,8 @@ body::after{
   flex-shrink: 1;
   height: 100%;
   min-height: calc(100vh - 10rem);
-  padding: 5rem;
-  @media screen and (max-width: 736px)
-  {
+  padding: 3rem;
+  @media screen and (max-width: 736px) {
     height: auto;
     padding: 1rem;
     justify-content: flex-start;
@@ -53,19 +52,19 @@ body::after{
   height: 100%;
   background-color: $secondary-color;
   background-image: url("../images/overlay.png");
-    @media screen and (max-width: 736px) {
-      display:flex;
-      flex-grow: 0;
-      flex-shrink: 0;
-      justify-content: center;
-      height: 100%;
-      overflow-x: hidden;
-      overflow-y: auto;
-      align-items: stretch;
-      flex-direction: column;
-      height: auto;
-      width: 100%;
-    }
+  @media screen and (max-width: 736px) {
+    display: flex;
+    flex-grow: 0;
+    flex-shrink: 0;
+    justify-content: center;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    align-items: stretch;
+    flex-direction: column;
+    height: auto;
+    width: 100%;
+  }
 }
 .textBlock {
   // width: 37.5rem;
@@ -82,7 +81,12 @@ body::after{
     max-width: 100%;
   }
 }
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   // color: rgba(255, 255, 255, 0.875);
   color: #333;
   font-family: $header-font;
@@ -95,7 +99,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 h1::after {
   bottom: -24px;
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   width: 3.5rem;
